Removed a few things from genres-tree.

--- a/src/fuzzytrackmatch/genres-tree.yaml
+++ b/src/fuzzytrackmatch/genres-tree.yaml
@@ -339,6 +339,7 @@
         - uk hard house
         - us garage
         - vocal house
+    - jungle
     - techno:
         - acid techno
         - detroit techno
