--- a/src/fuzzytrackmatch/genres-tree.yaml
+++ b/src/fuzzytrackmatch/genres-tree.yaml
@@ -357,6 +357,7 @@
         - classic trance
         - dream trance
         - goa trance:
+            - psytrance
             - dark psytrance
             - full on
             - psybreaks
