Added genres-tree.yaml to pyproject.toml package-data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ dependencies = ["pylast", "pyyaml", "requests>=2.31"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+fuzzytrackmatch = ["genres-tree.yaml"]
