Added aliases for genre names with diacritics removed. Made some changes to GenreWhitelist.normalize_tag so that it doesn't overwrite the original tag while checking for variations. Removed duplicate entry for 'bossanova' (vs 'bossa nova')

--- a/src/fuzzytrackmatch/genre-aliases.yaml
+++ b/src/fuzzytrackmatch/genre-aliases.yaml
@@ -299,3 +299,60 @@ contemporary r&b:
   - contemporary rhythm and blues
   - urban contemporary
   - urban pop
+
+# transliterated (removed diacritics and whatnot)
+
+méringue:
+  - meringue
+forró:
+  - forro
+norteño:
+  - norteno
+jùjú:
+  - juju
+reggae bultrón:
+  - reggae bultron
+raï:
+  - rai
+música sertaneja:
+  - musica sertaneja
+reggae en español:
+  - reggae en espanol
+música popular brasileira:
+  - musica popular brasileira
+axé:
+  - axe
+funaná:
+  - funana
+carimbó:
+  - carimbo
+música criolla:
+  - musica criolla
+baião:
+  - baiao
+neue deutsche härte:
+  - neue deutsche harte
+guaguancó:
+  - guaguanco
+laïkó:
+  - laiko
+musique concrète:
+  - musique concrete
+coupé-décalé:
+  - coupe-decale
+kayōkyoku:
+  - kayokyoku
+samba-canção:
+  - samba-cancao
+
+
+# other stuff
+
+electropunk:
+  - elektropunk
+
+neotraditional country:
+  - neo-traditional country
+
+neo-psychedelia:
+  - neo-psychedelic
